# sell-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
services/matching/: Dockerfile  pyproject.toml
services/matching/app/: bootstrap.py  config.py  core_client.py  dedup.py  env.py  grpc_server.py  intent.py  local_scenarios_harness.py  main.py  matcher.py  models_runtime.py  models_sync.py  models_watcher.py  nats_consumer.py  normalize.py  paths.py  recognition_harness.py  spam_filter.py
services/matching/data/: embedding_parity_samples.txt  intent_eval.jsonl  intent_real_chat.yaml  intent_samples.yaml  intent_train.jsonl  local_user_scenarios.yaml  product_catalog_keywords.yaml  product_pairs_eval.jsonl  product_pairs_seed.yaml  recognition_cases.yaml
services/matching/models/: intent_v1.joblib  intent_v1.meta.json  intent_v2.joblib  intent_v2.meta.json  intent_v3.joblib  intent_v3.meta.json  intent_v4.meta.json  semantic_thresholds.json
services/matching/reports/: recognition_baseline.json  recognition_eval.json
services/matching/scripts/: calibrate_semantic.py  clear_fastembed_cache.py  eval_local_scenarios.py  eval_product_pairs.py  eval_recognition.py  export-intent-dataset.sh  generate_intent_dataset.py  generate_recognition_cases.py  publish_models.py  publish_models.sh  retrain_intent.py  train_intent.py  train_prod.sh  verify_embedding_parity.py
services/matching/tests/: conftest.py  test_bootstrap.py  test_dedup.py  test_embedding_parity.py  test_encoder.py  test_env.py  test_health.py  test_indexer.py  test_intent_classifier.py  test_intent_dataset.py  test_intent_ml.py  test_local_user_scenarios.py  test_matcher.py  test_matcher_extra.py  test_matcher_v2.py  test_models_runtime.py  test_models_sync.py  test_models_watcher.py  test_nlp_extra.py  test_normalize_intent.py  test_normalize_v2.py  test_paths.py  test_process_message.py  test_product_gate.py  test_product_pairs_eval.py  (+10 more)
(+300 files in other folders)
