[project]
name = "sellbot-matching"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "rapidfuzz>=3.10.0",
    "redis>=5.2.0",
    "nats-py>=2.9.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
