[project]
name = "sellbot-matching"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "rapidfuzz>=3.10.0",
    "redis>=5.2.0",
    "nats-py>=2.9.0",
    "prometheus-client>=0.21.0",
    "pymorphy3>=2.0.0",
    "pymorphy3-dicts-ru>=2.4.0",
    "razdel>=0.5.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.6.0",
    "boto3>=1.35.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
train = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.nlp" = ["*.json"]

[tool.pytest.ini_options]
markers = [
    "integration: optional tests (Qdrant, encoder, intent training, semantic golden suite)",
]

[tool.coverage.run]
source = ["app/nlp", "app/matcher", "app/embeddings", "app/models_sync", "app/bootstrap"]
omit = ["app/generated/*", "app/main.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
